Added php support plus nav and footer

--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,16 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+
+    <div id="wrap">
+        <!-- Add your site or application content here -->
+        <div class="container" >
+            <header class="header" ng-include="'views/nav.html'" role="navigation" ></header>
+            <div ng-view=""></div> 
+        </div>
+        <div id="push"></div>        
+    </div>
+    <footer class="footer container" ng-include="'views/footer.html'"></footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
      <script>
@@ -64,6 +72,7 @@
     
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
