--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/testquery.js"></script>
         <!-- endbuild -->
 </body>
 </html>
